--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,36 @@
 .container {
+  background-color: #5a5a5a;
   display: block;
   margin: 0 auto;
-  width: 80%; }
+  width: 100%;
+  font-size: 1.5rem;
+  color: whitesmoke; }
 
 .videoWrapper {
   display: block;
+  margin: 0 auto;
+  width: 100%; }
+
+.transcript {
+  width: 80%;
+  display: block;
   margin: 0 auto; }
+
+.mejs__controls {
+  background-color: yellowgreen !important; }
+
+.mejs__container {
+  border: 5px solid yellowgreen; }
+
+.mejs__container * {
+  max-height: 100%;
+  max-width: 100%; }
+
+@media (min-width: 769px) {
+  .videoWrapper {
+    width: 80%; }
+
+  .transcript {
+    width: 80%; } }
 
 /*# sourceMappingURL=styles.css.map */
