--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ html {
   font-size: 1.5rem; }
 
 p {
+  line-height: 1.4;
   text-shadow: 2px 2px 4px #000; }
   p span:hover {
     text-shadow: 2px 2px 4px forestgreen;
